added varclus module

--- a/mypy-report/html/src/app/main.py.html
+++ b/mypy-report/html/src/app/main.py.html
@@ -46,9 +46,9 @@
 </pre></td>
 <td class="table-code"><pre><span class="line-empty" title="No Anys on this line!">"""Create a Dash app to visualize the results."""</span>
 <span class="line-empty" title="No Anys on this line!"></span>
-<span class="line-any" title="No Anys on this line!">import dash</span>
+<span class="line-any" title="No Anys on this line!">import dash  # type: ignore</span>
 <span class="line-any" title="No Anys on this line!">from dash import dcc, html, Input, Output</span>
-<span class="line-any" title="No Anys on this line!">import plotly.express as px</span>
+<span class="line-any" title="No Anys on this line!">import plotly.express as px  # type: ignore</span>
 <span class="line-precise" title="No Anys on this line!">import pandas as pd</span>
 <span class="line-empty" title="No Anys on this line!"></span>
 <span class="line-empty" title="No Anys on this line!"># Initialize the Dash app</span>
